fix BEAUti template & runs example again (fixes #4 and perhaps #6). May have fixed threading. #3